Cherry-pick a30d9284f5b9. rdar://problem/107133345

Compression Streams not handling large outputs during the flush stage
    https://bugs.webkit.org/show_bug.cgi?id=254021

    Reviewed by Chris Dumez and Brent Fulgham.

    We missed an edge case where during the flush step we may have data longer than
    the allocated output. Since the avail_in will be set to 0 we would just exit.
    We need to verify that the stream has ended before exiting.

    * LayoutTests/imported/w3c/web-platform-tests/compression/compression-large-flush-output.any-expected.txt: Added.
    * LayoutTests/imported/w3c/web-platform-tests/compression/compression-large-flush-output.any.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/compression/compression-large-flush-output.any.js: Added.
    (async compressData):
    (promise_test.async t):
    * Source/WebCore/Modules/compression/CompressionStreamEncoder.cpp:
    (WebCore::CompressionStreamEncoder::flush):
    (WebCore::CompressionStreamEncoder::didDeflateFinish const):
    (WebCore::didDeflateFail):
    (WebCore::CompressionStreamEncoder::compress):
    * Source/WebCore/Modules/compression/CompressionStreamEncoder.h:
    (WebCore::CompressionStreamEncoder::CompressionStreamEncoder):
    * Source/WebCore/Modules/compression/DecompressionStreamDecoder.cpp:
    (WebCore::DecompressionStreamDecoder::flush):
    (WebCore::DecompressionStreamDecoder::didInflateFinish const):
    (WebCore::didInflateFail):
    (WebCore::DecompressionStreamDecoder::didInflateContainExtraBytes const):
    (WebCore::DecompressionStreamDecoder::decompressZlib):
    (WebCore::DecompressionStreamDecoder::decompressAppleCompressionFramework):
    * Source/WebCore/Modules/compression/DecompressionStreamDecoder.h:
    (WebCore::DecompressionStreamDecoder::DecompressionStreamDecoder):

    Canonical link: https://commits.webkit.org/263997@main

Identifier: 259548.766@safari-7615-branch