Source/WebCore/Modules/compression/CompressionStreamEncoder.h
@@ -52,26 +52,27 @@ public:
     }
 
 private:
+    bool didDeflateFinish(int) const;
+
+    ExceptionOr<RefPtr<JSC::ArrayBuffer>> compress(const uint8_t* input, const size_t inputLength);
+    ExceptionOr<bool> initialize();
+
+    explicit CompressionStreamEncoder(unsigned char format)
+        : m_format(static_cast<Formats::CompressionFormat>(format))
+    {
+        std::memset(&m_zstream, 0, sizeof(m_zstream));
+    }
+
     // If the user provides too small of an input size we will automatically allocate a page worth of memory instead.
     // Very small input sizes can result in a larger output than their input. This would require an additional 
     // encode call then, which is not desired.
     const size_t startingAllocationSize = 16384; // 16KB
     const size_t maxAllocationSize = 1073741824; // 1GB
 
-
     bool m_initialized { false };
-    bool m_finish { false };
+    bool m_didFinish { false };
     z_stream m_zstream;
 
     Formats::CompressionFormat m_format;
-
-    ExceptionOr<RefPtr<JSC::ArrayBuffer>> compress(const uint8_t* input, const size_t inputLength);
-    ExceptionOr<bool> initialize();
-
-    explicit CompressionStreamEncoder(unsigned char format) 
-        : m_format(static_cast<Formats::CompressionFormat>(format))
-    {
-        std::memset(&m_zstream, 0, sizeof(m_zstream));
-    }
 };
 } // namespace WebCore
